IMPALA-8090: race when reusing ScanRange in test

The issue occurs in test code where two reads are issued
with the same ScanRange object back-to-back, e.g. in
SyncReadTest. The DiskIoMgr enqueues the last buffer
or cancels the scan range *before* closing the
'file_reader_', which means that the client thread
thinks the ScanRange is done and can re-enqueue
it into the DiskIoMgr.

This is not an issue in Impala itself because scan
ranges are not reused in this fashion.

I evaluated adding a DCHECK but the lifecycle
of the ScanRange objects is complicated enough
that there wasn't a straightforward invariant
to enforce.

Testing:
Looped the previously-failing test overnight.

Change-Id: I3122e5b2efea60ffe82d780930301d5be108876b
Reviewed-on: http://gerrit.cloudera.org:8080/12238
Reviewed-by: Joe McDonnell <joemcdonnell@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>